--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,4 +5,6 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=development
+      - API_BACKEND=development
+    volumes:
+      - /tmp/ficheros-contenedor:/var/ficheros
