--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,8 @@
 services:
-  mi-proyecto-devops:
-    image: localhost:8082/mi-proyecto-devops
+  em-mi-proyecto-devops:
+    image: localhost:8082/em-mi-proyecto-devops
     restart: always
     ports:
       - "3000:3000"
     environment:
       - API_BACKEND=development
-    volumes:
-      - /tmp/ficheros-contenedor:/var/ficheros
